--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
         with:
           python-version: "3.12.7"
 
-      # Install dependencies
-      - name: Install dependencies
+      # Install MLflow
+      - name: Install MLflow
         run: |
           python -m pip install --upgrade pip
           pip install mlflow
@@ -57,16 +57,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Setup git
+          # Configure Git to use GitHub Actions bot
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Track LFS for mlruns
+          # Install & track Git LFS for mlruns
           git lfs install
           git lfs track "mlruns/**" || true
           git add .gitattributes mlruns/ || true
 
-          # Set remote with token
+          # Set remote URL with token
           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
 
           # Commit jika ada perubahan
