--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-
     steps:
       # Checkout repo
       - uses: actions/checkout@v3
 
-      # Setup Python 3.12.7
+      # Setup Python
       - name: Set up Python 3.12.7
         uses: actions/setup-python@v4
         with:
@@ -49,27 +48,38 @@ jobs:
             -P test_dataset=$TEST_DATASET \
             --env-manager=local
 
-      # Set up Git and LFS using bot
-      - name: Set up Git and LFS
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git lfs install
-          git lfs track "mlruns/**" || true
-          git add .gitattributes || true
-          git commit -m "Track mlruns with Git LFS" || true
-          git push origin main || true
-
-      # Save mlruns to GitHub Repository using bot
-      - name: Save mlruns to repo
+      # Step 1: Track mlruns with Git LFS and commit .gitattributes
+      - name: Track mlruns with Git LFS
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
-          git add mlruns/
-          # Commit jika ada perubahan
+          git lfs install
+          git lfs track "mlruns/**" || true
+          git add .gitattributes || true
+
+          # set remote dengan token agar bot bisa push
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
+
+          if ! git diff --cached --quiet; then
+            git commit -m "Track mlruns with Git LFS"
+            git push origin main
+          else
+            echo "No changes to commit"
+          fi
+
+      # Step 2: Commit dan push mlruns hasil run MLflow
+      - name: Save mlruns from CI run
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add mlruns/ || true
+
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
+
           if ! git diff --cached --quiet; then
             git commit -m "Save mlruns from CI run"
             git push origin main
